--- a/311_blocks.ipynb
+++ b/311_blocks.ipynb
@@ -16,6 +16,7 @@
     "import os\n",
     "import glob\n",
     "import sklearn\n",
+    "import datetime\n",
     "\n",
     "import shapefile\n",
     "from matplotlib.patches import Polygon\n",
@@ -564,8 +565,340 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Extract Census linking information for request locations \n",
+    "### Extract Census linking information for request locations "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tim's code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 427,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import shapefile as sf\n",
+    "import array\n",
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 424,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def whichshape(lat,lon,path):\n",
+    "    sr = sf.Reader(path)\n",
+    "    shapes = sr.shapes()\n",
+    "    for i in range(len(shapes)):\n",
+    "        if inshape(lat,lon,shapes[i]):\n",
+    "            return i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 425,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def inshape(ptlat,ptlon,shape):\n",
+    "    # does not behave well near poles!!!\n",
+    "    pts = shape.points\n",
+    "    lat=[]\n",
+    "    lon=[]\n",
+    "    for pt in pts:\n",
+    "        lat.append(pt[1])\n",
+    "        lon.append(pt[0])\n",
+    "    lon_max=max(lon)\n",
+    "    lon_min=min(lon)\n",
+    "    lat_max=max(lat)\n",
+    "    lat_min=min(lat)\n",
+    "    \n",
+    "    if lon_min < -170 and lon_max > 170:\n",
+    "        for i in range(len(pts)):\n",
+    "            if pts[i][0]<0:\n",
+    "                pts[i][0] = 360+pts[i]\n",
+    "    \n",
+    "    if (ptlat > lat_max or ptlat < lat_min or\n",
+    "        ptlon > lon_max or ptlon < lon_min):\n",
+    "        return 0\n",
+    "    else:\n",
+    "        count = 0\n",
+    "        for i in range(len(pts)-1):\n",
+    "            line=[pts[i][0],pts[i][1],\n",
+    "                  pts[i+1][0],pts[i+1][1]]\n",
+    "                  \n",
+    "            if ((line[1] < ptlat and line[3] > ptlat) or \n",
+    "                (line[1] > ptlat and line[3] < ptlat)):\n",
+    "               frac = (line[1]-ptlat)/(line[1]-line[3])\n",
+    "               if line[0]+frac*(line[2]-line[0]) > ptlon:\n",
+    "                    count+=1\n",
+    "        \n",
+    "        line=[pts[-1][0],pts[0][1],\n",
+    "              pts[-1][0],pts[0][1]]                  \n",
+    "        if line[1] < ptlat and line[3] > ptlat:\n",
+    "           frac = (line[1]-ptlat)/(line[1]-line[3])\n",
+    "           if line[0]+frac*(line[2]-line[0]) > ptlon:\n",
+    "                count+=1\n",
     "\n",
+    "    return count%2         "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Trim shapefile down to San Diego County"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 439,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "r = shapefile.Reader('shapefiles/tl_2016_06_bg/tl_2016_06_bg.shp')\n",
+    "# Create a writer instance\n",
+    "w = shapefile.Writer(shapeType=shapefile.POLYGON)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 440,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Copy the fields to the writer\n",
+    "w.fields = list(r.fields)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 449,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Grab the geometry and records from all features \n",
+    "# with the correct county name \n",
+    "selection = [] \n",
+    "for rec in enumerate(r.records()):\n",
+    "    if ((rec[1][1]=='073') & (rec[1][3]!='0')):\n",
+    "          selection.append(rec) \n",
+    "# Add the geometry and records to the writer\n",
+    "\n",
+    "for rec in selection:\n",
+    "    w._shapes.append(r.shape(rec[0]))\n",
+    "    w.records.append(rec[1])\n",
+    "# Save the new shapefile\n",
+    "w.save(\"shapefiles/sandiego_county_blockgroups\") "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Match each 311 report with it's associated block group"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 457,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "barf = whichshape(32.7820463, -117.1473603, 'shapefiles/sandiego_county_blockgroups.shp')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 453,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "reading = sf.Reader('shapefiles/sandiego_county_blockgroups.shp')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 466,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('DeletionFlag', 'C', 1, 0),\n",
+       " ['STATEFP', 'C', 2, 0],\n",
+       " ['COUNTYFP', 'C', 3, 0],\n",
+       " ['TRACTCE', 'C', 6, 0],\n",
+       " ['BLKGRPCE', 'C', 1, 0],\n",
+       " ['GEOID', 'C', 12, 0],\n",
+       " ['NAMELSAD', 'C', 13, 0],\n",
+       " ['MTFCC', 'C', 5, 0],\n",
+       " ['FUNCSTAT', 'C', 1, 0],\n",
+       " ['ALAND', 'N', 14, 0],\n",
+       " ['AWATER', 'N', 14, 0],\n",
+       " ['INTPTLAT', 'C', 11, 0],\n",
+       " ['INTPTLON', 'C', 12, 0]]"
+      ]
+     },
+     "execution_count": 466,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reading.fields"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 464,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1'"
+      ]
+     },
+     "execution_count": 464,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reading.records()[barf][3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "graffiti['block']=None\n",
+    "graffiti['tract']=None\n",
+    "graffiti['geoid']=None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 490,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0:00:31.043858\n"
+     ]
+    }
+   ],
+   "source": [
+    "start = datetime.datetime.now()\n",
+    "\n",
+    "\n",
+    "for i in range(0,15): \n",
+    "    if (graffiti.loc[i,'Geolocation (Longitude)']!=0.0) :\n",
+    "        temp = whichshape(graffiti.loc[i,'Geolocation (Latitude)'], \n",
+    "                          graffiti.loc[i, 'Geolocation (Longitude)'], 'shapefiles/sandiego_county_blockgroups.shp')\n",
+    "        graffiti.loc[i, 'block'] = reading.records()[temp][3]\n",
+    "        graffiti.loc[i, 'tract'] = reading.records()[temp][2]\n",
+    "        graffiti.loc[i, 'geoid'] = reading.records()[temp][4]\n",
+    "        \n",
+    "finish = datetime.datetime.now()\n",
+    "print finish-start\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 488,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.timedelta(0, 5, 351311)"
+      ]
+     },
+     "execution_count": 488,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "finish-start"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 472,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "temp = whichshape(graffiti.loc[i,'Geolocation (Latitude)'], \n",
+    "                          graffiti.loc[i, 'Geolocation (Longitude)'], 'shapefiles/sandiego_county_blockgroups.shp')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 473,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "498"
+      ]
+     },
+     "execution_count": 473,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "CensusGeocode"
    ]
   },
@@ -4159,13 +4492,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Census Roads Shapefiles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 422,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "reader_roads = shapefile.Reader('shapefiles/CITY.ROADS_ALL_datasd/CITY_ROADS_ALL.shp')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 423,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "shapes_roads = reader_roads.shapes()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "reader_roads.fields"
+   ]
   },
   {
    "cell_type": "markdown",
