updated with code violations and police call info

--- a/data_organiser.ipynb
+++ b/data_organiser.ipynb
@@ -6,9 +6,9 @@
     "collapsed": true
    },
    "source": [
-    "### Requests Processing: \n",
+    "## Requests Processing: \n",
     "\n",
-    "process_requests.ipynb\n",
+    "### process_requests.ipynb\n",
     "#### - requests_processed_xxxx.csv \n",
     "    - individual request information\n",
     "    - Description\n",
@@ -21,7 +21,42 @@
     "    - Has mean distance from a street light for each BG\n",
     "    - Central lat/lon of BG\n",
     "    - Has total population per BG\n",
-    "    - Number of reports, reports per capita, percentage of reports graffiti related, etc"
+    "    - Number of reports, reports per capita, percentage of reports graffiti related, etc\n",
+    "    - Whether or not the census tract falls within the San Diego municipal area"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Code Violations Processing\n",
+    "\n",
+    "### code_violations.ipynb\n",
+    "\n",
+    "#### - code_violations_6mo_all.csv\n",
+    "    - Has case-by-case information.\n",
+    "    - Matched with tract, blockgroup \n",
+    "    - Not sorted at all by type of case\n",
+    "\n",
+    "#### - code_violations_6mo_bg.csv\n",
+    "    - Number of code violations for each tract/blockgroup with reports"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Arrest Record Processing\n",
+    "\n",
+    "### police_calls.ipynb\n",
+    "\n",
+    "#### - police_arrests_prelim.csv\n",
+    "    - Has case-by-case information for every police call where an arrest was made.\n",
+    "    - Matched with tract, blockgroup. Also added in the lat/lon of the call request \n",
+    "    - Not sorted at all by type of case\n",
+    "\n",
+    "#### - police_arrests_bg.csv\n",
+    "    - Number of police arrests for each tract/blockgroup"
    ]
   },
   {
@@ -29,7 +64,11 @@
    "metadata": {
     "collapsed": true
    },
-   "source": []
+   "source": [
+    "## Census Data Processing: \n",
+    "\n",
+    "Downloaded information for individual block groups in San Diego county from American Fact Finder site. "
+   ]
   },
   {
    "cell_type": "markdown",
