updated census processing info

--- a/data_organiser.ipynb
+++ b/data_organiser.ipynb
@@ -67,7 +67,13 @@
    "source": [
     "## Census Data Processing: \n",
     "\n",
-    "Downloaded information for individual block groups in San Diego county from American Fact Finder site. "
+    "Downloaded information for individual block groups in San Diego county from American Fact Finder site. \n",
+    "\n",
+    "### process_census.ipynb\n",
+    "\n",
+    "#### - census_trimmed_xxxx.csv\n",
+    "    - Organised by blockgroup\n",
+    "    - Has age breakdowns, race breakdowns, median age by "
    ]
   },
   {
