added more stats to the streetlight distance information

--- a/process_requests.ipynb
+++ b/process_requests.ipynb
@@ -573,7 +573,27 @@
    },
    "outputs": [],
    "source": [
-    "requests_unique.to_csv('output_files/requests_processed_0917.csv', index=False)"
+    "#requests_unique.to_csv('output_files/requests_processed_0917.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kschles/anaconda/lib/python2.7/site-packages/IPython/core/interactiveshell.py:2717: DtypeWarning: Columns (17,19,43) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    }
+   ],
+   "source": [
+    "requests_unique = pd.read_csv('output_files/requests_processed_0917.csv')"
    ]
   },
   {
@@ -592,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -613,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -640,7 +660,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# First, calculate the mean distance from a street light \n",
+    "# for different events organised by blockgroup. \n",
+    "# Mean sl_dist for each census track, block group \n",
+    "graffiti_distance1 = requests_unique.loc[np.where(requests_unique['Problem Category']=='Graffiti')[0],\n",
+    "                                        ['tract', 'blockgroup', 'sl_mindist']].groupby(['tract', \n",
+    "                                                                                        'blockgroup'], as_index=False).agg('std')\n",
+    "\n",
+    "dump_distance1 = requests_unique.loc[np.where(requests_unique['Problem Category']=='Litter/Dumping')[0],\n",
+    "                                        ['tract', 'blockgroup', 'sl_mindist']].groupby(['tract', \n",
+    "                                                                                        'blockgroup'], as_index=False).agg('std')\n",
+    "\n",
+    "response_time1 = requests_unique.loc[np.where(requests_unique['Problem Category']=='Graffiti')[0],\n",
+    "                                        ['tract', 'blockgroup', 'Age (Days)']].groupby(['tract', \n",
+    "                                                                                        'blockgroup'], as_index=False).agg('std')\n",
+    "\n",
+    "graffiti_distance1.rename(columns={'sl_mindist': 'gsl_stddist'}, inplace=True)\n",
+    "dump_distance1.rename(columns={'sl_mindist': 'dsl_stddist'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# First, calculate the mean distance from a street light \n",
+    "# for different events organised by blockgroup. \n",
+    "# Mean sl_dist for each census track, block group \n",
+    "graffiti_distance2 = requests_unique.loc[np.where(requests_unique['Problem Category']=='Graffiti')[0],\n",
+    "                                        ['tract', 'blockgroup', 'sl_mindist']].groupby(['tract', \n",
+    "                                                                                        'blockgroup'], as_index=False).agg('median')\n",
+    "\n",
+    "dump_distance2 = requests_unique.loc[np.where(requests_unique['Problem Category']=='Litter/Dumping')[0],\n",
+    "                                        ['tract', 'blockgroup', 'sl_mindist']].groupby(['tract', \n",
+    "                                                                                        'blockgroup'], as_index=False).agg('median')\n",
+    "\n",
+    "response_time2 = requests_unique.loc[np.where(requests_unique['Problem Category']=='Graffiti')[0],\n",
+    "                                        ['tract', 'blockgroup', 'Age (Days)']].groupby(['tract', \n",
+    "                                                                                        'blockgroup'], as_index=False).agg('median')\n",
+    "\n",
+    "graffiti_distance2.rename(columns={'sl_mindist': 'gsl_mediandist'}, inplace=True)\n",
+    "dump_distance2.rename(columns={'sl_mindist': 'dsl_mediandist'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -649,13 +723,46 @@
     "# Merge with minimum distance information: \n",
     "temp1 = pd.merge(total_reports, graffiti_distance, on=['tract', 'blockgroup'], \n",
     "                 how='left')\n",
-    "total_reports = pd.merge(temp1, dump_distance, on=['tract', 'blockgroup'], \n",
+    "temp2 = pd.merge(temp1, graffiti_distance1, on=['tract', 'blockgroup'], \n",
+    "                 how='left')\n",
+    "temp3 = pd.merge(temp2, graffiti_distance2, on=['tract', 'blockgroup'], \n",
+    "                 how='left')\n",
+    "\n",
+    "temp4 = pd.merge(temp3, dump_distance, on=['tract', 'blockgroup'], \n",
+    "                 how='left')\n",
+    "temp5 = pd.merge(temp4, dump_distance1, on=['tract', 'blockgroup'], \n",
+    "                 how='left')\n",
+    "total_reports = pd.merge(temp5, dump_distance2, on=['tract', 'blockgroup'], \n",
     "                         how='left')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['tract', 'blockgroup', 'count', 'graffiti_count', 'dump_count',\n",
+       "       'lighting_count', 'gsl_meandist', 'gsl_stddist', 'gsl_mediandist',\n",
+       "       'dsl_meandist', 'dsl_stddist', 'dsl_mediandist'], dtype=object)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_reports.columns.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -667,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -680,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -698,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -716,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -727,7 +834,7 @@
        "(23212, 1794)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -750,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -762,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -783,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -818,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -835,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -848,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -860,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -881,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -899,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -913,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -924,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -938,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -959,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -971,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -980,13 +1087,14 @@
      "data": {
       "text/plain": [
        "array(['tract', 'blockgroup', 'count', 'graffiti_count', 'dump_count',\n",
-       "       'lighting_count', 'gsl_meandist', 'dsl_meandist', 'sl_count',\n",
+       "       'lighting_count', 'gsl_meandist', 'gsl_stddist', 'gsl_mediandist',\n",
+       "       'dsl_meandist', 'dsl_stddist', 'dsl_mediandist', 'sl_count',\n",
        "       'landarea', 'cent_lat', 'cent_lon', 'sl_density', 'total_pop',\n",
        "       'rep_per_cap', 'graffiti_per', 'dump_per', 'lighting_per',\n",
        "       'tract_in_city'], dtype=object)"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
