--- a/process_requests.ipynb
+++ b/process_requests.ipynb
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -633,9 +633,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -646,13 +646,14 @@
     "                                        ['tract', 'blockgroup', 'sl_mindist']].groupby(['tract', \n",
     "                                                                                        'blockgroup'], as_index=False).agg('mean')\n",
     "\n",
+    "\n",
     "dump_distance = requests_unique.loc[np.where(requests_unique['Problem Category']=='Litter/Dumping')[0],\n",
     "                                        ['tract', 'blockgroup', 'sl_mindist']].groupby(['tract', \n",
     "                                                                                        'blockgroup'], as_index=False).agg('mean')\n",
     "\n",
-    "response_time = requests_unique.loc[np.where(requests_unique['Problem Category']=='Graffiti')[0],\n",
-    "                                        ['tract', 'blockgroup', 'Age (Days)']].groupby(['tract', \n",
-    "                                                                                        'blockgroup'], as_index=False).agg('mean')\n",
+    "#response_time = requests_unique.loc[np.where(requests_unique['Problem Category']=='Graffiti')[0],\n",
+    "#                                        ['tract', 'blockgroup', 'Age (Days)', 'count']].groupby(['tract', \n",
+    "#                                                                                        'blockgroup'], as_index=False).agg({'count' :'sum','sl_mindist': 'mean'})\n",
     "\n",
     "graffiti_distance.rename(columns={'sl_mindist': 'gsl_meandist'}, inplace=True)\n",
     "dump_distance.rename(columns={'sl_mindist': 'dsl_meandist'}, inplace=True)"
@@ -660,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -670,16 +671,16 @@
     "# for different events organised by blockgroup. \n",
     "# Mean sl_dist for each census track, block group \n",
     "graffiti_distance1 = requests_unique.loc[np.where(requests_unique['Problem Category']=='Graffiti')[0],\n",
-    "                                        ['tract', 'blockgroup', 'sl_mindist']].groupby(['tract', \n",
-    "                                                                                        'blockgroup'], as_index=False).agg('std')\n",
+    "                                        ['tract', 'blockgroup', 'sl_mindist', 'count']].groupby(['tract', \n",
+    "                                                                                        'blockgroup'], as_index=False).agg({'count' :'sum','sl_mindist': 'mean'})\n",
     "\n",
     "dump_distance1 = requests_unique.loc[np.where(requests_unique['Problem Category']=='Litter/Dumping')[0],\n",
-    "                                        ['tract', 'blockgroup', 'sl_mindist']].groupby(['tract', \n",
-    "                                                                                        'blockgroup'], as_index=False).agg('std')\n",
+    "                                        ['tract', 'blockgroup', 'sl_mindist', 'count']].groupby(['tract', \n",
+    "                                                                                        'blockgroup'], as_index=False).agg({'count' :'sum','sl_mindist': 'mean'})\n",
     "\n",
-    "response_time1 = requests_unique.loc[np.where(requests_unique['Problem Category']=='Graffiti')[0],\n",
-    "                                        ['tract', 'blockgroup', 'Age (Days)']].groupby(['tract', \n",
-    "                                                                                        'blockgroup'], as_index=False).agg('std')\n",
+    "#response_time1 = requests_unique.loc[np.where(requests_unique['Problem Category']=='Graffiti')[0],\n",
+    "#                                        ['tract', 'blockgroup', 'Age (Days)', 'count']].groupby(['tract', \n",
+    "#                                                                                        'blockgroup'], as_index=False).agg('std')\n",
     "\n",
     "graffiti_distance1.rename(columns={'sl_mindist': 'gsl_stddist'}, inplace=True)\n",
     "dump_distance1.rename(columns={'sl_mindist': 'dsl_stddist'}, inplace=True)"
@@ -687,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -714,23 +715,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 39,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Merge with minimum distance information: \n",
     "temp1 = pd.merge(total_reports, graffiti_distance, on=['tract', 'blockgroup'], \n",
     "                 how='left')\n",
-    "temp2 = pd.merge(temp1, graffiti_distance1, on=['tract', 'blockgroup'], \n",
+    "temp2 = pd.merge(temp1, graffiti_distance1[['tract', 'blockgroup', 'gsl_stddist']], on=['tract', 'blockgroup'], \n",
     "                 how='left')\n",
     "temp3 = pd.merge(temp2, graffiti_distance2, on=['tract', 'blockgroup'], \n",
     "                 how='left')\n",
     "\n",
     "temp4 = pd.merge(temp3, dump_distance, on=['tract', 'blockgroup'], \n",
     "                 how='left')\n",
-    "temp5 = pd.merge(temp4, dump_distance1, on=['tract', 'blockgroup'], \n",
+    "temp5 = pd.merge(temp4, dump_distance1[['tract', 'blockgroup', 'dsl_stddist']], on=['tract', 'blockgroup'], \n",
     "                 how='left')\n",
     "total_reports = pd.merge(temp5, dump_distance2, on=['tract', 'blockgroup'], \n",
     "                         how='left')"
@@ -738,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -751,7 +752,7 @@
        "       'dsl_meandist', 'dsl_stddist', 'dsl_mediandist'], dtype=object)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -762,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -774,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -787,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
@@ -805,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
@@ -823,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -834,7 +835,7 @@
        "(23212, 1794)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -857,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
@@ -869,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -890,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -925,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
@@ -942,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
@@ -955,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
@@ -967,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 55,
    "metadata": {
     "collapsed": true
    },
@@ -988,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 56,
    "metadata": {
     "collapsed": true
    },
@@ -1006,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
@@ -1020,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 58,
    "metadata": {
     "collapsed": true
    },
@@ -1031,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -1045,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -1066,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 61,
    "metadata": {
     "collapsed": true
    },
@@ -1078,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
@@ -1094,7 +1095,7 @@
        "       'tract_in_city'], dtype=object)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
