added in web/mobile/phone counts and refined block group members in the municipal region

--- a/process_requests.ipynb
+++ b/process_requests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -428,11 +428,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kschles/anaconda/lib/python2.7/site-packages/IPython/core/interactiveshell.py:2717: DtypeWarning: Columns (0,17,19,43) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    }
+   ],
    "source": [
     "# Once all the geocodes are done, output the file as requests_processed_start.csv: \n",
     "#requests.to_csv('output_files/requests_processed_start.csv', index=False)\n",
@@ -441,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -456,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -490,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -509,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -578,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -612,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -628,12 +637,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We want to break it up by how the 311 reports came in as well. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "mobile = requests_unique.loc[np.where(requests_unique['Case Origin']=='Mobile')[0], ['tract','blockgroup',\n",
+    "                                                               'Case Origin']]\n",
+    "web = requests_unique.loc[np.where(requests_unique['Case Origin']=='Web')[0], ['tract','blockgroup',\n",
+    "                                                               'Case Origin']]\n",
+    "phone = requests_unique.loc[np.where(requests_unique['Case Origin']=='Phone')[0], ['tract','blockgroup',\n",
+    "                                                               'Case Origin']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "mobile_counts = mobile.groupby(['tract', 'blockgroup'], as_index=False).agg('count')\n",
+    "mobile_counts.rename(columns={'Case Origin': 'mobile_counts'}, inplace=True)\n",
+    "\n",
+    "web_counts = web.groupby(['tract', 'blockgroup'], as_index=False).agg('count')\n",
+    "web_counts.rename(columns={'Case Origin': 'web_counts'}, inplace=True)\n",
+    "\n",
+    "phone_counts = phone.groupby(['tract', 'blockgroup'], as_index=False).agg('count')\n",
+    "phone_counts.rename(columns={'Case Origin': 'phone_counts'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "temp1 = pd.merge(total_reports, mobile_counts, on=['tract', 'blockgroup'], how='left')\n",
+    "temp2 = pd.merge(temp1, web_counts, on=['tract', 'blockgroup'], how='left')\n",
+    "total_reports = pd.merge(temp2, phone_counts, on=['tract', 'blockgroup'], how='left')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Next, we want to combine with the street light information. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -661,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -688,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -715,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -739,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -748,11 +811,12 @@
      "data": {
       "text/plain": [
        "array(['tract', 'blockgroup', 'count', 'graffiti_count', 'dump_count',\n",
-       "       'lighting_count', 'gsl_meandist', 'gsl_stddist', 'gsl_mediandist',\n",
-       "       'dsl_meandist', 'dsl_stddist', 'dsl_mediandist'], dtype=object)"
+       "       'lighting_count', 'mobile_counts', 'web_counts', 'phone_counts',\n",
+       "       'gsl_meandist', 'gsl_stddist', 'gsl_mediandist', 'dsl_meandist',\n",
+       "       'dsl_stddist', 'dsl_mediandist'], dtype=object)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -775,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -788,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -806,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -824,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -835,7 +899,7 @@
        "(23212, 1794)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -858,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -870,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -891,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -926,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -943,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -956,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -968,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -989,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -1007,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
@@ -1021,7 +1085,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Read in the edited list i made of block groups that are in municipal-range census tracts, \n",
+    "# but not within the city itself\n",
+    "sd_bg_edited = pd.read_csv('tract_blockgroups_to_ignore.csv')\n",
+    "sd_bg_edited['blockgroup'] = sd_bg_edited['blockgroup'].astype(float)\n",
+    "sd_bg_edited['tract'] = sd_bg_edited['tract'].astype(float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {
     "collapsed": true
    },
@@ -1032,21 +1111,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "for i in range(0,len(total_reports_demo)): \n",
-    "    temp = total_reports_demo.loc[i, 'tract']\n",
-    "    if (len(np.where(sd_city_proper['tract']==temp)[0])>0):\n",
-    "        total_reports_demo.loc[i, 'tract_in_city'] = 1.0"
+    "    temp_tract = total_reports_demo.loc[i, 'tract']\n",
+    "    temp_bg = total_reports_demo.loc[i, 'blockgroup']\n",
+    "    if (len(np.where(sd_city_proper['tract']==temp_tract)[0])>0):\n",
+    "        if (len(np.where((sd_bg_edited['tract']==temp_tract) \n",
+    "                         & (sd_bg_edited['blockgroup']==temp_bg))[0])==0):        \n",
+    "            total_reports_demo.loc[i, 'tract_in_city'] = 1.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 72,
    "metadata": {
     "collapsed": false
    },
@@ -1055,8 +1137,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In city proper: 905\n",
-      "Outside city proper: 889\n"
+      "In city proper: 836\n",
+      "Outside city proper: 958\n"
      ]
     }
    ],
@@ -1067,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 73,
    "metadata": {
     "collapsed": true
    },
