adding to outline

--- a/blog_outline.ipynb
+++ b/blog_outline.ipynb
@@ -62,17 +62,41 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "To help us understand the needs of areas that aren't using 311, we want to look at areas that are. What fraction of their 311 complaints are graffiti related? \n",
+    "\n",
+    "Below, we map out each of the census block groups in San Diego, color-coded by the fraction of reports that are graffiti-related. Darker colors a higher fraction of reports are graffiti related. Lighter colors means one of two things; either a) they don't have many reports at all or b) they have plenty of reports but few are graffiti related. Below, I outline blockgroups with less than 10 reports.\n",
+    "\n",
+    "<img src=\"output_figures/graffiti_per_map.png\">"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Some of the areas with very little reporting are in regions where the general fraction of graffiti reports is low overall. However, for some others, there are high graffiti rates nearby. Thus, we cannot just assume that a low number of reports means that there is not a graffiti problem."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Bringing in Demographic information \n",
+    "- Want to know if there are demographic patterns that distinguish graffiti rich and poor areas. \n",
+    "- For each block group, I pull information from the American Community Survey, part of the U.S. Census. \n",
+    "    - Age\n",
+    "    - Income \n",
+    "    - Home value, contract rent\n",
+    "    - Racial breakdown \n",
+    "    - Fraction on Public Assistance \n",
+    "    - Fraction of homes that are owner-occupied\n",
+    "    - Total population \n",
+    "- I also combine this with additional information from the city of San Diego: \n",
+    "    - Reported building code violations\n",
+    "    - Crime reports \n",
+    "    - Street light locations \n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
