improving motivation/problem statement

--- a/blog_outline.ipynb
+++ b/blog_outline.ipynb
@@ -7,10 +7,29 @@
     "#### The Problem: \n",
     "\n",
     "- San Diego wants more efficiently and effectively respond to citizen complaints about neighborhood graffiti filed with their 311 system. \n",
+    "- To primary types of graffiti: tagging and gang-related\n",
+    "    - Tagging: to get publicity for your graffiti group, etc. Expect that tagging is discouraged if the tags are rapidly painted over. Not always from the actual area they're tagging. \n",
+    "    - Gang-related: marking the turf of a particular gang, memorial for members, posturing by crossing out the names of others. Not necessarily discouraged by rapid repainting.\n",
+    "- From Graffiti Tracker report (data on 2011 graffiti): \n",
+    "    - Expect 22% gang-related (vast majority of these were also done for publicity)\n",
+    "    - 70% tagging\n",
+    "    - Remainder unclear\n",
+    "- In 2011, 129,639 square feet of damage in San Diego from graffiti. Costs about $250 to repair an individual graffiti area (<10 square feet) (2011 report, averages costs associated with painting and power washing).   \n",
+    "- Huge costs in repairs/maintenance alone and complicated breakdown because repairs handled by a range of different departments depending on where the graffiti occurred. \n",
+    "\n",
+    "-Also, graffiti has a negative affect on neighborhoods. The \"Broken Windows\" crime theory suggest that small infractions, like graffiti or illegal dumping, that persist over time can increase more violent and destructive crime. When graffiti is not rapidly removed, it suggests that the citizens in an area are not invested in the conditions and quality of life in an area, making it a prime location for increased crime. \n",
+    "\n",
+    "-San Diego wants to identify areas of high graffiti frequency to: \n",
+    "    - establish preventative measures (increased patrolling, community murals, etc) to save maintenance costs \n",
+    "    - improve response time to avoid an area appearing to be neglected. \n",
+    "    \n",
     "- Not all areas of San Diego make use of the 311 system. However, it is unclear if they're not filing reports because they don't have problems or they are simply not reporting neighborhood issues. \n",
     "- Using information from the areas that do file 311 reports, I will identify areas that have a higher fraction of graffiti reports. \n",
     "- I will look for demographic patterns that distinguish areas in San Diego with high and low rates of graffiti. \n",
-    "- With this demographic information, I can then design a machine-learning model that will predict the expected graffiti rate for an area, even if they're not filing reports."
+    "- With this demographic information, I can then design a machine-learning model that will predict the expected graffiti rate for an area, even if they're not filing reports.\n",
+    "- When they know which areas to focus on, San Diego city government can establish programs to prevent graffiti in the first place, such as community murals and increased patrolling. This will save them time and money, as they will not have to send maintenance crews to the same areas repeatedly. \n",
+    "\n",
+    "\n"
    ]
   },
   {
