added code to include average response time for graffiti calls per blockgroup

--- a/process_requests.ipynb
+++ b/process_requests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -587,20 +587,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 98,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/kschles/anaconda/lib/python2.7/site-packages/IPython/core/interactiveshell.py:2717: DtypeWarning: Columns (17,19,43) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  interactivity=interactivity, compiler=compiler, result=result)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "requests_unique = pd.read_csv('output_files/requests_processed_0917.csv')"
    ]
@@ -621,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 99,
    "metadata": {
     "collapsed": true
    },
@@ -634,6 +625,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1054"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(total_reports)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "graffiti_report_timescale = requests_unique.loc[np.where(requests_unique['Problem Category']=='Graffiti')[0], ['tract', 'blockgroup', 'Problem Category', 'Age (Days)']].groupby(by=['tract', 'blockgroup'], as_index=False).agg('mean')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -642,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 108,
    "metadata": {
     "collapsed": true
    },
@@ -658,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 109,
    "metadata": {
     "collapsed": true
    },
@@ -676,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 110,
    "metadata": {
     "collapsed": true
    },
@@ -684,7 +708,8 @@
    "source": [
     "temp1 = pd.merge(total_reports, mobile_counts, on=['tract', 'blockgroup'], how='left')\n",
     "temp2 = pd.merge(temp1, web_counts, on=['tract', 'blockgroup'], how='left')\n",
-    "total_reports = pd.merge(temp2, phone_counts, on=['tract', 'blockgroup'], how='left')"
+    "temp3 = pd.merge(temp2, phone_counts, on=['tract', 'blockgroup'], how='left')\n",
+    "total_reports = pd.merge(temp3, graffiti_report_timescale, on=['tract', 'blockgroup'], how='left')"
    ]
   },
   {
@@ -696,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 111,
    "metadata": {
     "collapsed": false
    },
@@ -724,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 112,
    "metadata": {
     "collapsed": true
    },
@@ -751,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 113,
    "metadata": {
     "collapsed": true
    },
@@ -778,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 114,
    "metadata": {
     "collapsed": false
    },
@@ -802,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 115,
    "metadata": {
     "collapsed": false
    },
@@ -812,11 +837,11 @@
       "text/plain": [
        "array(['tract', 'blockgroup', 'count', 'graffiti_count', 'dump_count',\n",
        "       'lighting_count', 'mobile_counts', 'web_counts', 'phone_counts',\n",
-       "       'gsl_meandist', 'gsl_stddist', 'gsl_mediandist', 'dsl_meandist',\n",
-       "       'dsl_stddist', 'dsl_mediandist'], dtype=object)"
+       "       'Age (Days)', 'gsl_meandist', 'gsl_stddist', 'gsl_mediandist',\n",
+       "       'dsl_meandist', 'dsl_stddist', 'dsl_mediandist'], dtype=object)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 117,
    "metadata": {
     "collapsed": true
    },
@@ -839,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 118,
    "metadata": {
     "collapsed": true
    },
@@ -852,7 +877,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 119,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1054, 864)"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(total_reports), len(sl_info)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
    "metadata": {
     "collapsed": true
    },
@@ -870,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 122,
    "metadata": {
     "collapsed": true
    },
@@ -888,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 123,
    "metadata": {
     "collapsed": false
    },
@@ -899,7 +946,7 @@
        "(23212, 1794)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -910,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 124,
    "metadata": {
     "collapsed": true
    },
@@ -922,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 125,
    "metadata": {
     "collapsed": true
    },
@@ -934,14 +981,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 127,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Output as a CSV\n",
-    "#sdcounty_only_requests.to_csv('output_files/sdcounty_only_requests_0917.csv', index=False)"
+    "#sdcounty_only_requests.to_csv('output_files/sdcounty_only_requests_0920.csv', index=False)"
    ]
   },
   {
@@ -955,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 128,
    "metadata": {
     "collapsed": false
    },
@@ -990,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 129,
    "metadata": {
     "collapsed": true
    },
@@ -1007,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 130,
    "metadata": {
     "collapsed": true
    },
@@ -1020,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 131,
    "metadata": {
     "collapsed": true
    },
@@ -1032,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 132,
    "metadata": {
     "collapsed": true
    },
@@ -1053,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 133,
    "metadata": {
     "collapsed": true
    },
@@ -1071,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 134,
    "metadata": {
     "collapsed": true
    },
@@ -1085,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 135,
    "metadata": {
     "collapsed": true
    },
@@ -1100,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 136,
    "metadata": {
     "collapsed": true
    },
@@ -1111,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 137,
    "metadata": {
     "collapsed": false
    },
@@ -1128,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 138,
    "metadata": {
     "collapsed": false
    },
@@ -1149,19 +1196,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 139,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Output the reports organised by block group \n",
-    "total_reports_demo.to_csv('output_files/total_reports_demo_0917.csv', inplace=True)"
+    "total_reports_demo.to_csv('output_files/total_reports_demo_0920.csv', inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 140,
    "metadata": {
     "collapsed": false
    },
@@ -1170,14 +1217,15 @@
      "data": {
       "text/plain": [
        "array(['tract', 'blockgroup', 'count', 'graffiti_count', 'dump_count',\n",
-       "       'lighting_count', 'gsl_meandist', 'gsl_stddist', 'gsl_mediandist',\n",
+       "       'lighting_count', 'mobile_counts', 'web_counts', 'phone_counts',\n",
+       "       'Age (Days)', 'gsl_meandist', 'gsl_stddist', 'gsl_mediandist',\n",
        "       'dsl_meandist', 'dsl_stddist', 'dsl_mediandist', 'sl_count',\n",
        "       'landarea', 'cent_lat', 'cent_lon', 'sl_density', 'total_pop',\n",
        "       'rep_per_cap', 'graffiti_per', 'dump_per', 'lighting_per',\n",
        "       'tract_in_city'], dtype=object)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
