--- a/tree_density.ipynb
+++ b/tree_density.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -92,7 +92,189 @@
       "27000 27000 27000\n",
       "28000 28000 28000\n",
       "29000 29000 29000\n",
-      "30000 30000 30000\n"
+      "30000 30000 30000\n",
+      "31000 31000 31000\n",
+      "32000 32000 32000\n",
+      "33000 33000 33000\n",
+      "34000 34000 34000\n",
+      "35000 35000 35000\n",
+      "36000 36000 36000\n",
+      "37000 37000 37000\n",
+      "38000 38000 38000\n",
+      "39000 39000 39000\n",
+      "40000 40000 40000\n",
+      "41000 41000 41000\n",
+      "42000 42000 42000\n",
+      "43000 43000 43000\n",
+      "44000 44000 44000\n",
+      "45000 45000 45000\n",
+      "46000 46000 46000\n",
+      "47000 47000 47000\n",
+      "48000 48000 48000\n",
+      "49000 49000 49000\n",
+      "50000 50000 50000\n",
+      "51000 51000 51000\n",
+      "52000 52000 52000\n",
+      "53000 53000 53000\n",
+      "54000 54000 54000\n",
+      "55000 55000 55000\n",
+      "56000 56000 56000\n",
+      "57000 57000 57000\n",
+      "58000 58000 58000\n",
+      "59000 59000 59000\n",
+      "60000 60000 60000\n",
+      "61000 61000 61000\n",
+      "62000 62000 62000\n",
+      "63000 63000 63000\n",
+      "64000 64000 64000\n",
+      "65000 65000 65000\n",
+      "66000 66000 66000\n",
+      "67000 67000 67000\n",
+      "68000 68000 68000\n",
+      "69000 69000 69000\n",
+      "70000 70000 70000\n",
+      "71000 71000 71000\n",
+      "72000 72000 72000\n",
+      "73000 73000 73000\n",
+      "74000 74000 74000\n",
+      "75000 75000 75000\n",
+      "76000 76000 76000\n",
+      "77000 77000 77000\n",
+      "78000 78000 78000\n",
+      "79000 79000 79000\n",
+      "80000 80000 80000\n",
+      "81000 81000 81000\n",
+      "82000 82000 82000\n",
+      "83000 83000 83000\n",
+      "84000 84000 84000\n",
+      "85000 85000 85000\n",
+      "86000 86000 86000\n",
+      "87000 87000 87000\n",
+      "88000 88000 88000\n",
+      "89000 89000 89000\n",
+      "90000 90000 90000\n",
+      "91000 91000 91000\n",
+      "92000 92000 92000\n",
+      "93000 93000 93000\n",
+      "94000 94000 94000\n",
+      "95000 95000 95000\n",
+      "96000 96000 96000\n",
+      "97000 97000 97000\n",
+      "98000 98000 98000\n",
+      "99000 99000 99000\n",
+      "100000 100000 100000\n",
+      "101000 101000 101000\n",
+      "102000 102000 102000\n",
+      "103000 103000 103000\n",
+      "104000 104000 104000\n",
+      "105000 105000 105000\n",
+      "106000 106000 106000\n",
+      "107000 107000 107000\n",
+      "108000 108000 108000\n",
+      "109000 109000 109000\n",
+      "110000 110000 110000\n",
+      "111000 111000 111000\n",
+      "112000 112000 112000\n",
+      "113000 113000 113000\n",
+      "114000 114000 114000\n",
+      "115000 115000 115000\n",
+      "116000 116000 116000\n",
+      "117000 117000 117000\n",
+      "118000 118000 118000\n",
+      "119000 119000 119000\n",
+      "120000 120000 120000\n",
+      "121000 121000 121000\n",
+      "122000 122000 122000\n",
+      "123000 123000 123000\n",
+      "124000 124000 124000\n",
+      "125000 125000 125000\n",
+      "126000 126000 126000\n",
+      "127000 127000 127000\n",
+      "128000 128000 128000\n",
+      "129000 129000 129000\n",
+      "130000 130000 130000\n",
+      "131000 131000 131000\n",
+      "132000 132000 132000\n",
+      "133000 133000 133000\n",
+      "134000 134000 134000\n",
+      "135000 135000 135000\n",
+      "136000 136000 136000\n",
+      "137000 137000 137000\n",
+      "138000 138000 138000\n",
+      "139000 139000 139000\n",
+      "140000 140000 140000\n",
+      "141000 141000 141000\n",
+      "142000 142000 142000\n",
+      "143000 143000 143000\n",
+      "144000 144000 144000\n",
+      "145000 145000 145000\n",
+      "146000 146000 146000\n",
+      "147000 147000 147000\n",
+      "148000 148000 148000\n",
+      "149000 149000 149000\n",
+      "150000 150000 150000\n",
+      "151000 151000 151000\n",
+      "152000 152000 152000\n",
+      "153000 153000 153000\n",
+      "154000 154000 154000\n",
+      "155000 155000 155000\n",
+      "156000 156000 156000\n",
+      "157000 157000 157000\n",
+      "158000 158000 158000\n",
+      "159000 159000 159000\n",
+      "160000 160000 160000\n",
+      "161000 161000 161000\n",
+      "162000 162000 162000\n",
+      "163000 163000 163000\n",
+      "164000 164000 164000\n",
+      "165000 165000 165000\n",
+      "166000 166000 166000\n",
+      "167000 167000 167000\n",
+      "168000 168000 168000\n",
+      "169000 169000 169000\n",
+      "170000 170000 170000\n",
+      "171000 171000 171000\n",
+      "172000 172000 172000\n",
+      "173000 173000 173000\n",
+      "174000 174000 174000\n",
+      "175000 175000 175000\n",
+      "176000 176000 176000\n",
+      "177000 177000 177000\n",
+      "178000 178000 178000\n",
+      "179000 179000 179000\n",
+      "180000 180000 180000\n",
+      "181000 181000 181000\n",
+      "182000 182000 182000\n",
+      "183000 183000 183000\n",
+      "184000 184000 184000\n",
+      "185000 185000 185000\n",
+      "186000 186000 186000\n",
+      "187000 187000 187000\n",
+      "188000 188000 188000\n",
+      "189000 189000 189000\n",
+      "190000 190000 190000\n",
+      "191000 191000 191000\n",
+      "192000 192000 192000\n",
+      "193000 193000 193000\n",
+      "194000 194000 194000\n",
+      "195000 195000 195000\n",
+      "196000 196000 196000\n",
+      "197000 197000 197000\n",
+      "198000 198000 198000\n",
+      "199000 199000 199000\n",
+      "200000 200000 200000\n",
+      "201000 201000 201000\n",
+      "202000 202000 202000\n",
+      "203000 203000 203000\n",
+      "204000 204000 204000\n",
+      "205000 205000 205000\n",
+      "206000 206000 206000\n",
+      "207000 207000 207000\n",
+      "208000 208000 208000\n",
+      "209000 209000 209000\n",
+      "210000 210000 210000\n",
+      "211000 211000 211000\n",
+      "212000 212000 212000\n"
      ]
     }
    ],
@@ -109,13 +291,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "sl_record.to_csv('output_files/tree_latlon.csv', index=False)"
+    "#sl_record.to_csv('output_files/tree_latlon.csv', index=False)"
    ]
   },
   {
@@ -127,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -138,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -152,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -161,22 +343,108 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "48455\n",
-      "47000 0:00:51.430666\n",
-      "47100 0:01:44.302094\n",
-      "47200 0:02:20.313068\n",
-      "47300 0:02:40.013126\n",
-      "47400 0:02:49.721932\n",
-      "47500 0:02:26.032445\n",
-      "47600 0:02:18.374865\n",
-      "47700 0:02:01.482173\n",
-      "47800 0:02:16.113438\n",
-      "47900 0:01:50.279062\n",
-      "48000 0:01:21.353079\n",
-      "48100 0:02:07.290142\n",
-      "48200 0:02:04.870696\n",
-      "48300 0:02:11.107390\n",
-      "48400 0:01:12.004652\n"
+      "212304\n",
+      "0 0:00:02.893599\n",
+      "100 0:02:26.204687\n",
+      "200 0:02:10.428990\n",
+      "300 0:02:14.718893\n",
+      "400 0:02:14.028638\n",
+      "500 0:02:29.313050\n",
+      "600 0:01:59.143584\n",
+      "700 0:02:15.821953\n",
+      "800 0:02:28.403488\n",
+      "900 0:02:13.602576\n",
+      "1000 0:02:27.509093\n",
+      "1100 0:01:58.080060\n",
+      "1200 0:01:45.315669\n",
+      "1300 0:02:00.668711\n",
+      "1400 0:02:07.493672\n",
+      "1600 0:03:47.908297\n",
+      "1700 0:02:34.826596\n",
+      "1800 0:02:20.303334\n",
+      "1900 0:01:34.636094\n",
+      "2000 0:01:59.159586\n",
+      "2100 0:02:11.855618\n",
+      "2200 0:02:24.346633\n",
+      "2300 0:02:16.136168\n",
+      "2400 0:02:39.718886\n",
+      "2500 0:02:25.011911\n",
+      "2600 0:02:32.351667\n",
+      "2700 0:02:31.876770\n",
+      "2800 0:02:16.256783\n",
+      "2900 0:02:23.257063\n",
+      "3000 0:02:27.250820\n",
+      "3100 0:02:35.996246\n",
+      "3200 0:02:28.776729\n",
+      "3300 0:02:25.318540\n",
+      "3400 0:02:41.024538\n",
+      "3500 0:02:36.861081\n",
+      "3600 0:02:27.679608\n",
+      "3700 0:02:04.346031\n",
+      "3800 0:02:16.122209\n",
+      "3900 0:02:23.264048\n",
+      "4000 0:02:24.281530\n",
+      "4100 0:01:55.875857\n",
+      "4200 0:01:37.662995\n",
+      "4300 0:02:21.095719\n",
+      "4400 0:02:06.546926\n",
+      "4500 0:01:51.208555\n",
+      "4600 0:02:28.739189\n",
+      "4700 0:02:24.032239\n",
+      "4800 0:02:17.651837\n",
+      "4900 0:01:56.597177\n",
+      "5100 0:03:29.829801\n",
+      "5200 0:02:11.381021\n",
+      "5300 0:02:05.060330\n",
+      "5400 0:02:16.928127\n",
+      "5500 0:02:15.779656\n",
+      "5600 0:02:04.856259\n",
+      "5700 0:02:10.267387\n",
+      "5800 0:02:18.704026\n",
+      "5900 0:02:27.687674\n",
+      "6000 0:01:58.944141\n",
+      "6100 0:02:08.273125\n",
+      "6200 0:02:20.240724\n",
+      "6300 0:02:02.079569\n",
+      "6400 0:02:05.879826\n",
+      "6500 0:01:44.540410\n",
+      "6600 0:02:11.069052\n",
+      "6700 0:02:02.575538\n",
+      "6800 0:02:06.423685\n",
+      "6900 0:01:08.609482\n",
+      "7000 0:01:45.525745\n",
+      "7100 0:01:46.899166\n",
+      "7200 0:01:58.205336\n",
+      "7300 0:01:53.379822\n",
+      "7400 0:01:36.448849\n",
+      "7500 0:01:55.114415\n",
+      "7600 0:02:10.293365\n",
+      "7700 0:02:15.552318\n",
+      "7800 0:01:59.057112\n",
+      "7900 0:02:09.120050\n",
+      "8000 0:02:04.168919\n",
+      "8100 0:01:55.008682\n",
+      "8200 0:02:13.606760\n",
+      "8300 0:01:58.771278\n",
+      "8400 0:02:03.293461\n",
+      "8500 0:02:03.693845\n",
+      "8600 0:02:00.949093\n",
+      "8700 0:01:47.710262\n",
+      "8800 0:02:11.915026\n",
+      "8900 0:01:55.981199\n",
+      "9000 0:01:56.913971\n",
+      "9100 0:01:56.191346\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'address1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-e67d4910b616>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m             \u001b[0;32mexcept\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mn_attempts\u001b[0m\u001b[0;34m>=\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m                     \u001b[0;32mprint\u001b[0m \u001b[0;34m'bad in try1 '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0maddress1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m                     \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'address1' is not defined"
      ]
     }
    ],
@@ -185,7 +453,7 @@
     "\n",
     "print len(sl_record)\n",
     "\n",
-    "for i in range(46956,len(sl_record)): \n",
+    "for i in range(9156, 10000): \n",
     "    if ((sl_record.loc[i,'lon']!=0.0) \n",
     "        & (np.isnan(sl_record.loc[i,'lon'])==False)) :\n",
     "        n_attempts = 0\n",
@@ -196,7 +464,7 @@
     "                break \n",
     "            except: \n",
     "                if n_attempts>=5: \n",
-    "                    print 'bad in try1 ' + address1\n",
+    "                    print 'bad in try1 ' + i + ' ' + i\n",
     "                    break \n",
     "\n",
     "        if (len(temp1[0]['2010 Census Blocks'])>0):\n",
@@ -210,20 +478,41 @@
     "\n",
     "                if (i % 100 == 0): \n",
     "                    finish = datetime.datetime.now()\n",
-    "                    print i, finish-start\n",
+    "                    print i, 'Time Diff: ', finish-start, 'Finish Time: ', finish\n",
     "                    start = datetime.datetime.now()\n",
-    "\n"
+    "\n",
+    "                if (i % 250 == 0): \n",
+    "                    sl_record.to_csv('output_files/tree_records_prelim.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9156\n"
+     ]
+    }
+   ],
+   "source": [
+    "print i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "#sl_record.to_csv('output_files/sl_records_all.csv')"
+    "#sl_record.to_csv('output_files/tree_records_prelim.csv', index=False)"
    ]
   },
   {
